style.css
body {
  width: 90%;
  background-color: #FFCC99;
  font-family: Georgia, serif;
  margin: auto;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Diplomata SC', cursive;
}

#logo {
  margin-top: 10px;
  width: 50%;
  background-image: url("salmon.png");
  background-repeat: no-repeat;
  margin: auto;
  position: relative;
}

#floatText {
  position: absolute;
  top: 123px;
  font-weight: bold;
  color: #FFF;
  margin: auto;
  padding: 0px;
}

#logo h1 {
  font-size: 2.4vw;
  text-shadow: 2px 2px 4px #000000;
  margin: 0px;
  padding: 0px;
  text-align: center;
}

#logo p {
  font-size: 1.5vw;
  text-shadow: 2px 2px 4px #000000;
  margin: 0px;
  padding: 0px;
  text-align: center;
}

li {
  margin: 0px;
  padding: 0px;
  font-family: Arial, sans-serif;
}

.content {
  background-color: #E8CE93;
  border: solid 1px black;
  display: inline-block;
}

#spacer {
  width: 10;
}

